--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ markdown: kramdown
 # so be sure to set them if your theme uses them.
 #
 title : StashCache
-tagline: The Cache 
+tagline: The Stash that keeps Caching
 author :
   name : Name Lastname
   email : blah@email.test
@@ -28,7 +28,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://stashcache.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
